fixed logo spacing

--- a/styles.css/header.css
+++ b/styles.css/header.css
@@ -16,7 +16,7 @@
 
 /* Header (navigation bar) */
  header {
-    padding:10px;;
+    padding:10px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -130,7 +130,6 @@ body {
 /* Global image styling */
 img{
     display:block;
-    margin-left:auto;
     margin-right:auto;
     width:50%;
 }
